GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_RouteStartDate__c.field-meta.xml
<CustomField>
    <fullName>B2b_RouteStartDate__c</fullName>
    <label>Route Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>