GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_S3_BeNe_Premium_Tariff_Code__c.field-meta.xml
<CustomField>
    <fullName>B2b_S3_BeNe_Premium_Tariff_Code__c</fullName>
    <label>S3 &amp; BeNe Premium Tariff Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>B2b_Percentage_Discount_Premium__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TA00C05FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C06FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C07FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C08FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C09FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C10FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C11FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C12FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C13FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C14FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C15FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C16FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C17FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C18FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C19FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C20FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C21FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C22FRBE</fullName>
            </value>
            <value>
                <fullName>TA00C23FRBE</fullName>
            </value>
            <value>
                <fullName>TA00CBXFRBE</fullName>
            </value>
            <value>
                <fullName>TA00C05FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C06FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C07FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C08FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C09FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C10FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C11FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C12FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C13FRDE</fullName>
            </value>
            <value>
                <fullName>TA00C14FRDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>