GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_TicketsStandard__c.field-meta.xml
<CustomField>
    <fullName>B2b_TicketsStandard__c</fullName>
    <label>Tickets Standard</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>