GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_TurnoverComfort__c.field-meta.xml
<CustomField>
    <fullName>B2b_TurnoverComfort__c</fullName>
    <label>Turnover Comfort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>