GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/BeNe_Last_Extract__c.field-meta.xml
<CustomField>
    <fullName>BeNe_Last_Extract__c</fullName>
    <label>BeNe Last Extract</label>
    <type>Date</type>
</CustomField>