GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/Corporate_Code_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Code_End_Date__c</fullName>
    <label>Corporate Code End Date</label>
    <type>Date</type>
</CustomField>