GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/Corporate_Code_Linked__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Code_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Code Linked</label>
    <type>Checkbox</type>
</CustomField>