GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Higher</fullName>
            </value>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>