GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/Extract_Requested__c.field-meta.xml
<CustomField>
    <fullName>Extract_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extract Requested</label>
    <type>Checkbox</type>
</CustomField>