GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/FCE_Continent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FCE_Continent_End_Date__c</fullName>
    <label>FCE Continent End Date</label>
    <type>Date</type>
</CustomField>