GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/FCE_London_Linked__c.field-meta.xml
<CustomField>
    <fullName>FCE_London_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FCE London Linked</label>
    <type>Checkbox</type>
</CustomField>