GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/FCE_London_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FCE_London_Start_Date__c</fullName>
    <label>FCE London Start Date</label>
    <type>Date</type>
</CustomField>