GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GDS_Air_EPlus_Tariff_Code__c.field-meta.xml
<CustomField>
    <fullName>GDS_Air_EPlus_Tariff_Code__c</fullName>
    <label>GDS Air E.Plus Tariff Code</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>