GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GDS_Air_Extract__c.field-meta.xml
<CustomField>
    <fullName>GDS_Air_Extract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDS Air Extract</label>
    <type>Checkbox</type>
</CustomField>