GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GDS_Air_Last_Extract__c.field-meta.xml
<CustomField>
    <fullName>GDS_Air_Last_Extract__c</fullName>
    <label>GDS Air Last Extract</label>
    <type>Date</type>
</CustomField>