GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GDS_Air_Standard_Premier_Tariff_Codes__c.field-meta.xml
<CustomField>
    <fullName>GDS_Air_Standard_Premier_Tariff_Codes__c</fullName>
    <label>GDS Air Standard Premier Tariff Codes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>S3_BeNe_Standard_Premier_Tariff_Codes__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ZNRT03 - ZNOW03 - WNRT03 - WNOW03</fullName>
            </value>
            <value>
                <fullName>ZNRT04 - ZNOW04 - WNRT04 - WNOW04</fullName>
            </value>
            <value>
                <fullName>ZNRT05 - ZNOW05 - WNRT05 - WNOW05</fullName>
            </value>
            <value>
                <fullName>ZN03NLRT - ZN03NLOW - WN03NLRT - WN03NLOW</fullName>
            </value>
            <value>
                <fullName>ZN04NLRT - ZN04NLOW - WN04NLRT - WN04NLOW</fullName>
            </value>
            <value>
                <fullName>ZN05NLRT - ZN05NLOW - WN05NLRT - WN05NLOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>