GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GDS_Code_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GDS_Code_End_Date__c</fullName>
    <label>GDS Code End Date</label>
    <type>Date</type>
</CustomField>