GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GDS_Code_Linked__c.field-meta.xml
<CustomField>
    <fullName>GDS_Code_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDS Code Linked</label>
    <type>Checkbox</type>
</CustomField>