GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GDS_Used__c.field-meta.xml
<CustomField>
    <fullName>GDS_Used__c</fullName>
    <label>GDS Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Galileo</fullName>
            </value>
            <value>
                <fullName>Sabre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>