GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GND_BE_Continent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GND_BE_Continent_End_Date__c</fullName>
    <label>GND BE Continent End Date</label>
    <type>Date</type>
</CustomField>