GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GND_BE_London_Linked__c.field-meta.xml
<CustomField>
    <fullName>GND_BE_London_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GND BE London Linked</label>
    <type>Checkbox</type>
</CustomField>