GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GND_NL_London_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GND_NL_London_End_Date__c</fullName>
    <label>GND NL London End Date</label>
    <type>Date</type>
</CustomField>