GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/GND_NL_London_Linked__c.field-meta.xml
<CustomField>
    <fullName>GND_NL_London_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GND NL London Linked</label>
    <type>Checkbox</type>
</CustomField>