GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/PCC_Changed__c.field-meta.xml
<CustomField>
    <fullName>PCC_Changed__c</fullName>
    <label>PCC Changed</label>
    <type>Date</type>
</CustomField>