GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/PCC_Codes__c.field-meta.xml
<CustomField>
    <fullName>PCC_Codes__c</fullName>
    <label>PCC Codes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>