GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/PCC_Extract__c.field-meta.xml
<CustomField>
    <fullName>PCC_Extract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCC Extract</label>
    <type>Checkbox</type>
</CustomField>