GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/Percentage_Discount_Business_Premier_PL__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Discount_Business_Premier_PL__c</fullName>
    <label>Percentage Discount Business Premier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>B2b_Route__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK-Paris-Lille-Brussels 6%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 8%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 9%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 10%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 11%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 12%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 13%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 14%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 15%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 16%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 17%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 18%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 19%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 20%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 21%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 22%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 23%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 24%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 25%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 26%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 27%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 28%</fullName>
            </value>
            <value>
                <fullName>UK-Paris-Lille-Brussels 29%</fullName>
            </value>
            <value>
                <fullName>UK-Amsterdam-Rotterdam 6%</fullName>
            </value>
            <value>
                <fullName>UK-Amsterdam-Rotterdam 8%</fullName>
            </value>
            <value>
                <fullName>UK-Amsterdam-Rotterdam 9%</fullName>
            </value>
            <value>
                <fullName>UK-Amsterdam-Rotterdam 10%</fullName>
            </value>
            <value>
                <fullName>UK-Amsterdam-Rotterdam 11%</fullName>
            </value>
            <value>
                <fullName>UK-Amsterdam-Rotterdam 12%</fullName>
            </value>
            <value>
                <fullName>UK-Amsterdam-Rotterdam 13%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>